--- a/css/style.css
+++ b/css/style.css
@@ -184,7 +184,7 @@ body {
 }
 
 .main {
-  margin-top: 98px;
+  margin-top: 99px;
   display: flex;
   justify-content: center;
   gap: 20px;
@@ -375,9 +375,88 @@ body {
   background: white;
   border-radius: 50%;
   cursor: pointer;
-  border: 1.5px solid white;
+  border: 1.6px solid white;
 }
 
 .main .wrapper ul .selected-track {
   background: rgba(41, 53, 118, 0.67);
+}
+
+.pop-products {
+  margin-top: 45px;
+  height: 508px;
+  width: 1240px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+}
+
+.pop-products h1 {
+  margin-bottom: 41px;
+}
+
+.pop-products .p-carrousel-container {
+  height: 100%;
+  width: 1240px;
+  display: flex;
+  /* overflow: hidden; */
+  background: rgba(255, 255, 0, 0.3);
+}
+
+.pop-products .p-carrousel-container .p-slier {
+  width: 100%;
+  display: flex;
+  gap: 20px;
+}
+
+.pop-products .p-carrousel-container .p-slier img {
+  height: 316px;
+  width: 295px;
+  object-fit: cover;
+  margin-bottom: 13px;
+  border: 1px solid;
+}
+
+.pop-products .p-carrousel-container .p-slier .p-slide {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 373px;
+}
+
+.pop-products .p-carrousel-container .p-slier .p-slide .infos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 6px;
+}
+
+.pop-products .p-carrousel-container .p-slier .p-slide .infos h4 {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+}
+
+.pop-products .p-carrousel-container .p-slier .p-slide .infos h3 {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 23px;
+  color: #929292;
+}
+
+.pop-products .p-car-nav span {
+  height: 32px;
+  width: 32px;
+}
+
+.pop-products .p-car-nav span img {
+  height: 32px;
+  width: 32px;
+}
+
+.pop-products .p-car-nav span img:hover {
+  cursor: pointer;
 }
